fix toggle switches getting squashed

--- a/src/components/Toggle/style.scss
+++ b/src/components/Toggle/style.scss
@@ -12,6 +12,7 @@
 	border-radius: 9px;
 	cursor: pointer;
 	position: relative;
+	flex: 0 0 auto;
 
 	transition: background-color 0.125s ease;
 
